Change font-family to Arial for the form on find-match.html to see if it solves the display issue of the form on iphones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,12 +154,11 @@ main {
     margin-top: 1rem;
     margin-bottom: 1rem;
     font-size: 18px;
-    font-family: Arial, sans-serif;
-    color: black;
     border: 2px solid rgb(18, 128, 223);
     border-radius: 3px;
     padding: 0.5rem;
     background-color: white;
+    box-shadow: 0 0 3px rgb(18, 128, 223);
 }
 
 #section-three i {
@@ -190,6 +189,7 @@ main {
     /* Using flexbox in order to be able to center the vamos-button in the form */
     display: flex;
     flex-direction: column;
+    font-family: Arial, sans-serif;
 
 }
 
@@ -236,9 +236,10 @@ main {
     border-radius: 2px;
     padding: 0.5rem 1rem;
     font-size: 100%;
-    font-weight: bold;
+    /*font-weight: bold;*/
     box-shadow: 0 0 3px rgb(18, 128, 223);
     background-color: white;
+    color: black;
 }
 
 /* Gallery page */
